--- a/faculties.html
+++ b/faculties.html
@@ -7,6 +7,8 @@
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
   <style>
@@ -14,159 +16,185 @@
       background-color: #0b1d3a;
       color: #f8f9fa;
       font-family: 'Poppins', sans-serif;
-      margin:0;
-      padding:0;
+      padding-bottom: 80px;
     }
 
     header {
-      background: linear-gradient(90deg,#0d47a1,#1976d2);
-      text-align:center;
-      padding:30px 10px;
+      background: linear-gradient(90deg, #0d47a1, #1976d2);
+      text-align: center;
+      padding: 30px 15px;
     }
 
     header h1 {
-      font-size:2.2rem;
-      font-weight:700;
-      color:#fff;
-      margin-bottom:10px;
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 8px;
     }
 
+    /* Teacher boxes */
     .teacher-box {
-      background-color:#10264d;
-      border-radius:12px;
-      padding:15px;
-      text-align:center;
-      cursor:pointer;
-      transition: transform 0.3s, box-shadow 0.3s;
-      margin-bottom:20px;
+      background-color: #10264d;
+      color: #fff;
+      padding: 15px;
+      border-radius: 12px;
+      margin: 10px 0;
+      cursor: pointer;
+      text-align: center;
+      transition: 0.3s;
     }
 
     .teacher-box:hover {
       transform: translateY(-5px);
-      box-shadow:0 8px 20px rgba(255,215,0,0.3);
+      box-shadow: 0 6px 15px rgba(255,215,0,0.3);
     }
 
-    .teacher-box h6 {
-      color:#ffd700;
-      font-weight:600;
-      margin:0;
-    }
-
-    /* Popup */
+    /* Profile popup */
     .profile-popup {
+      display: none;
       position: fixed;
-      top:0; left:0;
-      width:100%; height:100%;
-      background: rgba(0,0,0,0.7);
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      visibility:hidden;
-      opacity:0;
-      transition: all 0.3s ease;
-      z-index:999;
+      top: 50%;
+      left: 50%;
+      width: 90%;
+      max-width: 400px;
+      background: #fff;
+      color: #000;
+      border-radius: 15px;
+      padding: 20px;
+      transform: translate(-50%, -50%) scale(0.8);
+      z-index: 1000;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+      animation: fadeScale 0.5s forwards;
     }
 
-    .profile-popup.active {
-      visibility:visible;
-      opacity:1;
+    @keyframes fadeScale {
+      from { opacity: 0; transform: translate(-50%, -45%) scale(0.8);}
+      to { opacity: 1; transform: translate(-50%, -50%) scale(1);}
     }
 
-    .profile-content {
-      background:#fff;
-      color:#000;
-      padding:25px;
-      border-radius:15px;
-      max-width:350px;
-      width:90%;
-      text-align:center;
-      position:relative;
+    .profile-popup img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #ffd700;
+      display: block;
+      margin: 0 auto 15px;
+      animation: popIn 0.5s ease;
     }
 
-    .profile-content img {
-      width:140px;
-      height:140px;
-      border-radius:50%;
-      object-fit:cover;
-      border:3px solid #ffd700;
-      margin-bottom:15px;
+    @keyframes popIn {
+      0% { transform: scale(0.6); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
     }
 
-    .profile-content h5 {
-      font-weight:700;
-      margin-bottom:5px;
-      color:#0d47a1;
+    .profile-popup h5 {
+      text-align: center;
+      font-weight: 700;
+      margin-bottom: 5px;
     }
 
-    .profile-content small {
-      display:block;
-      margin-bottom:5px;
-      color:#555;
+    .profile-popup small {
+      display: block;
+      text-align: center;
+      margin-bottom: 10px;
+      color: #ff9800;
     }
 
-    .profile-content p {
-      font-size:0.9rem;
-      margin:10px 0;
+    .profile-popup p {
+      font-size: 0.9rem;
+      text-align: center;
+      margin-bottom: 15px;
+      color: #333;
     }
 
-    .close-popup {
-      position:absolute;
-      top:10px; right:15px;
-      font-size:1.5rem;
-      cursor:pointer;
-      color:#0d47a1;
-      font-weight:700;
+    .profile-popup .social-buttons {
+      text-align: center;
     }
 
-    /* Social Icons */
-    .social-buttons {
-      margin-top:10px;
+    .profile-popup .social-buttons a {
+      font-size: 1.4rem;
+      margin: 0 6px;
+      transition: 0.3s;
+      display: inline-block;
+      animation: floatIcon 2s infinite;
     }
 
-    .social-buttons a {
-      font-size:1.4rem;
-      margin:0 6px;
-      transition:0.3s;
+    @keyframes floatIcon {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-5px); }
     }
 
-    .social-buttons a:hover {
+    .whatsapp { color: #25D366; }
+    .instagram { color: #E1306C; }
+    .facebook { color: #1877F2; }
+    .x { color: #000000; }
+    .telegram { color: #0088cc; }
+    .email { color: #ff9800; }
+
+    .profile-popup .social-buttons a:hover {
       transform: scale(1.3);
       filter: drop-shadow(0 0 6px rgba(0,0,0,0.5));
     }
 
-    .whatsapp { color:#25D366; }
-    .instagram { color:#E1306C; }
-    .facebook { color:#1877F2; }
-    .x { color:#000000; }
-    .telegram { color:#0088cc; }
-    .email { color:#FFA500; }
+    /* Close button */
+    .close-popup {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 1.3rem;
+      cursor: pointer;
+      color: #000;
+    }
 
-    /* Back to Home */
+    /* Overlay */
+    .overlay {
+      display: none;
+      position: fixed;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      background: rgba(0,0,0,0.6);
+      z-index: 999;
+    }
+
+    /* Back to Home button */
     .back-home {
-      display:block;
-      width:200px;
-      margin:30px auto 50px;
-      text-align:center;
-      padding:10px 0;
-      border-radius:30px;
-      background:#ffd700;
-      color:#0b1d3a;
-      font-weight:600;
-      text-decoration:none;
-      transition:0.3s;
+      display: block;
+      margin: 25px auto 0;
+      text-align: center;
+      width: 180px;
+      padding: 10px;
+      border-radius: 30px;
+      border: 2px solid #ffd700;
+      color: #ffd700;
+      font-weight: 600;
+      text-decoration: none;
+      transition: 0.3s;
     }
 
     .back-home:hover {
-      background:#e6c200;
-      color:#000;
+      background: #ffd700;
+      color: #0b1d3a;
+      transform: scale(1.05);
     }
 
-    /* Responsive Grid */
-    @media (max-width: 576px){
-      .teacher-box { margin-bottom:15px; }
+    /* Footer */
+    footer {
+      background: #06142c;
+      text-align: center;
+      color: #fff;
+      padding: 20px 10px;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+      margin-top: 30px;
+      font-size: 0.9rem;
     }
-    @media (min-width: 577px) and (max-width: 992px){
-      .teacher-box { margin-bottom:20px; }
+
+    /* Responsive grid */
+    @media (min-width: 992px) {
+      .teacher-box { margin: 10px; }
     }
   </style>
 </head>
@@ -175,131 +203,128 @@
   <!-- HEADER -->
   <header>
     <h1>Our Faculties</h1>
+    <p>Click a teacher to view profile</p>
   </header>
 
   <!-- TEACHER NAMES -->
-  <div class="container my-5">
-    <div class="row g-3 justify-content-center">
-
-      <div class="col-6 col-md-4 col-lg-3">
-        <div class="teacher-box" onclick="openPopup('popup1')">
-          <h6>Suhail P</h6>
-        </div>
+  <div class="container my-4">
+    <div class="row">
+      <div class="col-12 col-lg-3">
+        <div class="teacher-box" data-teacher="t1">SUHAIL P</div>
       </div>
-
-      <div class="col-6 col-md-4 col-lg-3">
-        <div class="teacher-box" onclick="openPopup('popup2')">
-          <h6>Firos Faizy AK</h6>
-        </div>
+      <div class="col-12 col-lg-3">
+        <div class="teacher-box" data-teacher="t2">FIROS FAIZY AK</div>
       </div>
-
-      <div class="col-6 col-md-4 col-lg-3">
-        <div class="teacher-box" onclick="openPopup('popup3')">
-          <h6>Darimi Usthad</h6>
-        </div>
+      <div class="col-12 col-lg-3">
+        <div class="teacher-box" data-teacher="t3">DARIMI USTHAD</div>
       </div>
-
-      <div class="col-6 col-md-4 col-lg-3">
-        <div class="teacher-box" onclick="openPopup('popup4')">
-          <h6>Fairoosudheen Aslami</h6>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <!-- POPUPS -->
-  <!-- Teacher 1 -->
-  <div class="profile-popup" id="popup1">
-    <div class="profile-content">
-      <span class="close-popup" onclick="closePopup('popup1')">&times;</span>
-      <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Suhail P">
-      <h5>Suhail P</h5>
-      <small>SWADAR MUALLIM</small>
-      <small>📞 7034678818</small>
-      <p>A passionate educator known for guiding students with care and commitment to moral and academic excellence.</p>
-      <div class="social-buttons">
-        <a href="https://wa.me/7034678818" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
-        <a href="mailto:suhail@example.com" class="email"><i class="bi bi-envelope-fill"></i></a>
+      <div class="col-12 col-lg-3">
+        <div class="teacher-box" data-teacher="t4">FAIROOSUDHEEN ASLAMI</div>
       </div>
     </div>
   </div>
 
-  <!-- Teacher 2 -->
-  <div class="profile-popup" id="popup2">
-    <div class="profile-content">
-      <span class="close-popup" onclick="closePopup('popup2')">&times;</span>
-      <img src="https://i.ibb.co/3mXsbSdg/Whats-App-Image-2025-10-25-at-8-37-28-AM.jpg" alt="Firos Faizy AK">
-      <h5>Firos Faizy AK</h5>
-      <small>TEACHER</small>
-      <small>📞 9645134854</small>
-      <p>Dedicated to fostering a love for learning and nurturing discipline through compassionate teaching.</p>
-      <div class="social-buttons">
-        <a href="https://wa.me/9645134854" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
-        <a href="mailto:firos@example.com" class="email"><i class="bi bi-envelope-fill"></i></a>
-      </div>
+  <!-- OVERLAY -->
+  <div class="overlay"></div>
+
+  <!-- TEACHER PROFILES -->
+  <div class="profile-popup" id="t1">
+    <span class="close-popup">&times;</span>
+    <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Suhail P">
+    <h5>SUHAIL P</h5>
+    <small>SWADAR MUALLIM | 📞 7034678818</small>
+    <p>A passionate educator known for guiding students with care and commitment to moral and academic excellence.</p>
+    <div class="social-buttons">
+      <a href="https://wa.me/7034678818" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
+      <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
+      <a href="mailto:example1@email.com" class="email"><i class="bi bi-envelope-fill"></i></a>
     </div>
   </div>
 
-  <!-- Teacher 3 -->
-  <div class="profile-popup" id="popup3">
-    <div class="profile-content">
-      <span class="close-popup" onclick="closePopup('popup3')">&times;</span>
-      <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Darimi Usthad">
-      <h5>Darimi Usthad</h5>
-      <small>TEACHER</small>
-      <small>📞 8078055520</small>
-      <p>An experienced teacher with deep knowledge of Islamic studies and a calm, inspiring teaching style.</p>
-      <div class="social-buttons">
-        <a href="https://wa.me/8078055520" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
-        <a href="mailto:darimi@example.com" class="email"><i class="bi bi-envelope-fill"></i></a>
-      </div>
+  <div class="profile-popup" id="t2">
+    <span class="close-popup">&times;</span>
+    <img src="https://i.ibb.co/3mXsbSdg/Whats-App-Image-2025-10-25-at-8-37-28-AM.jpg" alt="Firos">
+    <h5>FIROS FAIZY AK</h5>
+    <small>TEACHER | 📞 9645134854</small>
+    <p>Dedicated to fostering a love for learning and nurturing discipline through compassionate teaching.</p>
+    <div class="social-buttons">
+      <a href="https://wa.me/9645134854" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
+      <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
+      <a href="mailto:example2@email.com" class="email"><i class="bi bi-envelope-fill"></i></a>
     </div>
   </div>
 
-  <!-- Teacher 4 -->
-  <div class="profile-popup" id="popup4">
-    <div class="profile-content">
-      <span class="close-popup" onclick="closePopup('popup4')">&times;</span>
-      <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Fairoosudheen Aslami">
-      <h5>Fairoosudheen Aslami</h5>
-      <small>TEACHER</small>
-      <small>📞 9497349254</small>
-      <p>Brings enthusiasm and innovation into the classroom, inspiring students to excel in academics and values.</p>
-      <div class="social-buttons">
-        <a href="https://wa.me/9497349254" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
-        <a href="mailto:fairoos@example.com" class="email"><i class="bi bi-envelope-fill"></i></a>
-      </div>
+  <div class="profile-popup" id="t3">
+    <span class="close-popup">&times;</span>
+    <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Darimi">
+    <h5>DARIMI USTHAD</h5>
+    <small>TEACHER | 📞 8078055520</small>
+    <p>An experienced teacher with deep knowledge of Islamic studies and a calm, inspiring teaching style.</p>
+    <div class="social-buttons">
+      <a href="https://wa.me/8078055520" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
+      <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
+      <a href="mailto:example3@email.com" class="email"><i class="bi bi-envelope-fill"></i></a>
     </div>
   </div>
 
-  <!-- BACK TO HOME -->
+  <div class="profile-popup" id="t4">
+    <span class="close-popup">&times;</span>
+    <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Fairoos">
+    <h5>FAIROOSUDHEEN ASLAMI</h5>
+    <small>TEACHER | 📞 9497349254</small>
+    <p>Brings enthusiasm and innovation into the classroom, inspiring students to excel in academics and values.</p>
+    <div class="social-buttons">
+      <a href="https://wa.me/9497349254" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
+      <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
+      <a href="mailto:example4@email.com" class="email"><i class="bi bi-envelope-fill"></i></a>
+    </div>
+  </div>
+
   <a href="index.html" class="back-home">← Back to Home</a>
 
-  <script>
-    function openPopup(id) {
-      document.getElementById(id).classList.add('active');
-    }
-    function closePopup(id) {
-      document.getElementById(id).classList.remove('active');
-    }
-  </script>
+  <footer>
+    © 2025 All rights reserved. | Noorussalam Madrasa
+  </footer>
 
+  <div class="overlay"></div>
+
+  <script>
+    const boxes = document.querySelectorAll('.teacher-box');
+    const popups = document.querySelectorAll('.profile-popup');
+    const overlay = document.querySelector('.overlay');
+    const closeButtons = document.querySelectorAll('.close-popup');
+
+    boxes.forEach(box => {
+      box.addEventListener('click', () => {
+        const target = box.dataset.teacher;
+        document.getElementById(target).style.display = 'block';
+        overlay.style.display = 'block';
+      });
+    });
+
+    closeButtons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        btn.parentElement.style.display = 'none';
+        overlay.style.display = 'none';
+      });
+    });
+
+    overlay.addEventListener('click', () => {
+      popups.forEach(p => p.style.display = 'none');
+      overlay.style.display = 'none';
+    });
+  </script>
 </body>
 </html>
