--- a/idcard.html
+++ b/idcard.html
@@ -5,16 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ID Card Generator | Noorussalam Madrasa</title>
 
-  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Google Font (New Premium Look) -->
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
     body {
       background: linear-gradient(135deg, #0b5ed7 0%, #74b9ff 100%);
-      font-family: 'Quicksand', sans-serif;
+      font-family: 'Poppins', sans-serif;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -22,6 +19,7 @@
       justify-content: center;
       padding: 30px;
     }
+
     .id-form {
       background: #fff;
       border-radius: 15px;
@@ -30,19 +28,21 @@
       width: 100%;
       max-width: 420px;
       text-align: center;
-      margin-bottom: 40px;
       animation: fadeIn 0.8s ease;
     }
+
     .id-form h2 {
       color: #0b5ed7;
       font-weight: 700;
       margin-bottom: 15px;
     }
+
     .id-form p {
       color: #6c757d;
       font-size: 14px;
       margin-bottom: 25px;
     }
+
     .id-form button {
       background: #0b5ed7;
       border: none;
@@ -53,15 +53,18 @@
       color: #fff;
       transition: all 0.3s ease;
     }
+
     .id-form button:hover {
       background: #0849a2;
     }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
+
 <body>
 
   <div class="id-form">
@@ -84,154 +87,172 @@
     </form>
   </div>
 
-<script>
-const scriptURL =
-  'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
 
-document.getElementById("idForm").addEventListener("submit", e => {
-  e.preventDefault();
+    document.getElementById('idForm').addEventListener('submit', e => {
+      e.preventDefault();
 
-  const formData = new FormData(e.target);
-  const classVal = formData.get("class");
-  const rollVal = formData.get("roll");
+      const formData = new FormData(e.target);
+      const classVal = formData.get('class');
+      const rollVal = formData.get('roll');
 
-  const url = `${scriptURL}?class=${classVal}&roll=${rollVal}`;
-  const newWin = window.open("", "_blank");
-  newWin.document.write("<h3 style='text-align:center;font-family:Quicksand;color:#0b5ed7;'>Loading ID Card...</h3>");
+      const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
 
-  fetch(url)
-    .then(res => res.json())
-    .then(data => {
-      if (data.result === "success") {
-        const s = data.student;
-        const qrData = `UID: ${s.UID}, Admission: ${s.AdmissionNumber}, Name: ${s.FullName}, Class: ${s.ClassLevel}, Roll: ${s.RollNumber}`;
-        const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=100x100`;
+      const newWin = window.open("", "_blank");
+      newWin.document.write("<h3 style='text-align:center;font-family:Poppins;color:#0b5ed7;'>Loading ID Card...</h3>");
 
-        const html = `
-        <html>
-        <head>
-          <title>${s.FullName} - ID Card</title>
-          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-          <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
-          <style>
-            body {
-              background: #eef3ff;
-              font-family: 'Quicksand', sans-serif;
-              display: flex;
-              flex-direction: column;
-              align-items: center;
-              padding: 30px;
-            }
-            .id-card {
-              width: 380px;
-              background: white;
-              border-radius: 20px;
-              box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-              overflow: hidden;
-              text-align: center;
-              border: 4px solid #0b5ed7;
-            }
-            .id-header {
-              background: linear-gradient(90deg, #0b5ed7, #74b9ff);
-              color: white;
-              padding: 12px;
-            }
-            .id-header h5 {
-              margin: 0;
-              font-size: 18px;
-              font-weight: 700;
-            }
-            .id-header small {
-              font-size: 12px;
-              display: block;
-              opacity: 0.9;
-            }
-            .id-body {
-              padding: 20px;
-            }
-            .id-photo {
-              width: 100px;
-              height: 100px;
-              border-radius: 50%;
-              object-fit: cover;
-              margin-top: -20px;
-              border: 4px solid white;
-              box-shadow: 0 0 10px rgba(0,0,0,0.3);
-            }
-            .name {
-              color: #0b5ed7;
-              margin-top: 10px;
-              font-size: 20px;
-              font-weight: 700;
-            }
-            p {
-              margin: 2px 0;
-              font-size: 14px;
-              color: #333;
-            }
-            .qr { margin-top: 10px; }
-            .academic { 
-              font-weight: 600; 
-              color: #0b5ed7; 
-              margin-top: 8px;
-            }
-            .btn-print, .btn-home {
-              margin-top: 20px;
-              width: 200px;
-              border-radius: 30px;
-              padding: 10px;
-              font-weight: 600;
-            }
-            .btn-home {
-              background:#0b5ed7;color:white;
-            }
-          </style>
-        </head>
-        <body>
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          if (data.result === 'success') {
 
-          <div class="id-card">
-            <div class="id-header">
-              <h5>NOORUSSALAM SECONDARY MADRASA</h5>
-              <small>Kambippalam Kerala Estate</small>
-              <small>Under SKIMVB | Reg No: 6110</small>
-            </div>
+            const s = data.student;
 
-            <div class="id-body">
-              <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" class="id-photo">
-              <div class="name">${s.FullName}</div>
+            const html = `
+<html>
+<head>
+  <title>${s.FullName} - ID Card</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
 
-              <p><b>UID:</b> ${s.UID}</p>
-              <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
-              <p><b>Father’s Name:</b> ${s.FatherName}</p>
-              <p><b>Class:</b> ${s.ClassLevel}</p>
-              <p><b>Roll No:</b> ${s.RollNumber}</p>
-              <p><b>Phone:</b> ${s.Phone}</p>
+  <style>
+    body {
+      background: #eef3ff;
+      font-family: 'Quicksand', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 30px;
+    }
 
-              <div class="qr">
-                <img src="${qrURL}">
-                <p class="academic">Academic Year: 2025–26</p>
-              </div>
-            </div>
-          </div>
-
-          <button onclick="window.print()" class="btn btn-outline-primary btn-print">
-            Print ID Card
-          </button>
-
-          <a href="index.html">
-            <button class="btn btn-home">Back to Home</button>
-          </a>
-
-        </body>
-        </html>`;
-
-        newWin.document.open();
-        newWin.document.write(html);
-        newWin.document.close();
+    @media print {
+      body * { visibility: hidden; }
+      #idcard, #idcard * { visibility: visible; }
+      #idcard {
+        position: absolute;
+        left: 50%;
+        top: 20px;
+        transform: translateX(-50%);
       }
+    }
+
+    .id-card {
+      width: 380px;
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+      overflow: hidden;
+      text-align: center;
+      border: 4px solid #0b5ed7;
+    }
+
+    .id-header {
+      background: linear-gradient(90deg, #0b5ed7, #74b9ff);
+      color: white;
+      padding: 12px;
+    }
+
+    .id-header h5 {
+      margin: 0;
+      font-size: 18px;
+      font-weight: 700;
+    }
+
+    .id-header small {
+      font-size: 12px;
+      display: block;
+      opacity: 0.9;
+    }
+
+    .id-body {
+      padding: 20px;
+    }
+
+    .id-photo {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-top: -20px;
+      border: 4px solid white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+
+    .name {
+      color: #0b5ed7;
+      margin-top: 10px;
+      font-size: 20px;
+      font-weight: 700;
+    }
+
+    p {
+      margin: 2px 0;
+      font-size: 14px;
+      color: #333;
+    }
+
+    .btn-print, .btn-home {
+      margin-top: 20px;
+      width: 200px;
+      border-radius: 30px;
+      padding: 10px;
+      font-weight: 600;
+    }
+
+    .btn-home {
+      background: #0b5ed7;
+      color: white;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div id="idcard" class="id-card">
+    <div class="id-header">
+      <h5>NOORUSSALAM SECONDARY MADRASA</h5>
+      <small>Kambippalam Kerala Estate</small>
+      <small>Under SKIMVB | Reg No: 6110</small>
+    </div>
+
+    <div class="id-body">
+      <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" class="id-photo">
+
+      <div class="name">${s.FullName}</div>
+
+      <p><b>UID:</b> ${s.UID}</p>
+      <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
+      <p><b>Father’s Name:</b> ${s.FatherName}</p>
+      <p><b>Class:</b> ${s.ClassLevel}</p>
+      <p><b>Roll No:</b> ${s.RollNumber}</p>
+      <p><b>Phone:</b> ${s.Phone}</p>
+    </div>
+  </div>
+
+  <button onclick="window.print()" class="btn btn-outline-primary btn-print">Print ID Card</button>
+
+  <a href="index.html">
+    <button class="btn btn-home">Back to Home</button>
+  </a>
+
+</body>
+</html>
+`;
+
+            newWin.document.open();
+            newWin.document.write(html);
+            newWin.document.close();
+
+          } else {
+            newWin.document.write(`<h3 style='color:red;text-align:center;'>${data.message}</h3>`);
+          }
+        })
+        .catch(() => {
+          newWin.document.write("<h3 style='color:red;text-align:center;'>Error fetching data.</h3>");
+        });
     });
-});
-</script>
+  </script>
 
 </body>
 </html>
