--- a/idcard.html
+++ b/idcard.html
@@ -3,178 +3,257 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ID Card</title>
+<title>ID Card Generator | Noorussalam Madrasa</title>
 
-<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-<!-- QR Code JS -->
-<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
 
 <style>
-  body {
-    background: #eef3ff;
-    font-family: "Poppins", sans-serif;
+body {
+    background: linear-gradient(135deg, #0b5ed7 0%, #74b9ff 100%);
+    font-family: 'Poppins', sans-serif;
+    min-height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    padding: 25px;
-  }
+    justify-content: center;
+    padding: 30px;
+}
 
-  /* ---------------- ID CARD SIZE (STANDARD 54mm × 86mm) ---------------- */
-  .id-card {
-    width: 328px;     /* 54mm → 328px */
-    height: 524px;    /* 86mm → 524px */
-    background: white;
-    border-radius: 18px;
-    box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.2);
-    border: 4px solid #004aad;
-    overflow: hidden;
-    position: relative;
+.id-form {
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+    padding: 30px;
+    width: 100%;
+    max-width: 420px;
     text-align: center;
-  }
+    animation: fadeIn 0.8s ease;
+}
 
-  .id-header {
-    background: linear-gradient(90deg, #004aad, #4a90ff);
-    color: white;
-    padding: 10px;
-  }
-
-  .id-header h5 {
-    font-size: 15px;
-    margin: 0;
+.id-form h2 {
+    color: #0b5ed7;
     font-weight: 700;
-  }
+}
 
-  .id-header small {
-    font-size: 11px;
-    opacity: 0.9;
-  }
-
-  .id-photo {
-    width: 110px;
-    height: 110px;
-    border-radius: 50%;
-    margin-top: 15px;
-    border: 4px solid white;
-    object-fit: cover;
-    box-shadow: 0 3px 8px rgba(0,0,0,0.4);
-  }
-
-  .name {
-    font-size: 20px;
-    margin-top: 8px;
-    font-weight: 700;
-    color: #004aad;
-  }
-
-  p {
-    font-size: 13px;
-    margin: 2px 0;
-  }
-
-  .qr-box {
-    margin-top: 10px;
-  }
-
-  #qrcode {
-    width: 80px;
-    margin: auto;
-  }
-
-  /* ---------------- PRINT ONLY THE ID CARD ---------------- */
-  @media print {
-    body * {
-      visibility: hidden;
-    }
-    #idcard, #idcard * {
-      visibility: visible;
-    }
-    #idcard {
-      position: absolute;
-      left: 50%;
-      top: 20px;
-      transform: translateX(-50%);
-    }
-  }
-
-  .btn-main {
-    margin-top: 25px;
-    width: 230px;
-    padding: 10px;
-    border-radius: 30px;
+.id-form button {
+    background: #0b5ed7;
+    border: none;
+    padding: 10px 0;
+    width: 100%;
+    border-radius: 8px;
     font-weight: 600;
-  }
+    color: #fff;
+}
+
+@keyframes fadeIn {
+    from {opacity:0; transform: translateY(-10px);}
+    to   {opacity:1; transform: translateY(0);}
+}
 </style>
 </head>
 
 <body>
 
-<!-- ---------------- ID CARD CONTENT ---------------- -->
-<div id="idcard" class="id-card">
+<div class="id-form">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80">
+    <h2>NOORUSSALAM MADRASA</h2>
+    <p>Enter your Class and Roll Number to generate your ID card</p>
 
-  <div class="id-header">
-    <h5>NOORUSSALAM SECONDARY MADRASA</h5>
-    <small>Kambippalam - Kerala Estate</small><br>
-    <small>Under SKIMVB | Reg No: 6110</small>
-  </div>
+    <form id="idForm">
+        <div class="mb-3 text-start">
+            <label class="form-label">Class</label>
+            <input type="text" name="class" class="form-control" required>
+        </div>
 
-  <!-- Student Photo -->
-  <img id="photo" class="id-photo" src="https://via.placeholder.com/150">
+        <div class="mb-3 text-start">
+            <label class="form-label">Roll Number</label>
+            <input type="text" name="roll" class="form-control" required>
+        </div>
 
-  <div class="name" id="fullname">Student Name</div>
-
-  <p><b>UID:</b> <span id="uid">123456</span></p>
-  <p><b>Admission No:</b> <span id="admno">2025</span></p>
-  <p><b>Father:</b> <span id="father">Abdul Rahman</span></p>
-  <p><b>Class:</b> <span id="class">5</span></p>
-  <p><b>Roll No:</b> <span id="roll">12</span></p>
-  <p><b>Phone:</b> <span id="phone">9876543210</span></p>
-
-  <!-- QR Code Box -->
-  <div class="qr-box">
-    <div id="qrcode"></div>
-  </div>
-
+        <button type="submit">Generate Digital ID Card</button>
+    </form>
 </div>
 
-<!-- Buttons -->
-<button onclick="window.print()" class="btn btn-outline-primary btn-main">
-  Print ID Card
-</button>
+<script>
+const scriptURL = "https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec";
+
+document.getElementById("idForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    const form = new FormData(e.target);
+    const classVal = form.get("class");
+    const rollVal = form.get("roll");
+
+    const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
+
+    const win = window.open("", "_blank");
+    win.document.write("<h3 style='text-align:center;color:#0b5ed7;font-family:Poppins;'>Loading ID Card...</h3>");
+
+    try {
+        const res = await fetch(url);
+        const data = await res.json();
+
+        if (data.result !== "success") {
+            win.document.body.innerHTML =
+                `<h3 style='color:red;text-align:center;'>${data.message}</h3>`;
+            return;
+        }
+
+        const s = data.student;
+
+        const html = `
+<!DOCTYPE html>
+<html>
+<head>
+<title>${s.FullName} - ID Card</title>
+<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<style>
+body {
+    background: #eef3ff;
+    font-family: 'Quicksand', sans-serif;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    padding:30px;
+}
+
+@media print {
+    body * { visibility:hidden; }
+    #idcard, #idcard * { visibility:visible; }
+    #idcard { position:absolute; left:50%; top:10px; transform:translateX(-50%); }
+}
+
+/* ID Card */
+.id-card {
+    width: 328px;
+    height: 205px;
+    background:#fff;
+    border-radius:18px;
+    border:4px solid #0b5ed7;
+    box-shadow:0 8px 25px rgba(0,0,0,0.25), inset 0 0 12px rgba(0,0,0,0.28);
+    overflow:hidden;
+    text-align:center;
+    position:relative;
+}
+
+/* Watermark */
+.watermark {
+    position:absolute;
+    width:120px;
+    height:120px;
+    background:url('https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png') center/contain no-repeat;
+    opacity:0.10;
+    top:36%;
+    left:50%;
+    transform:translate(-50%, -50%);
+}
+
+/* Header */
+.id-header {
+    background: linear-gradient(90deg, #0b5ed7, #74b9ff);
+    color:white;
+    padding:6px;
+}
+.id-header h5 { margin:0; font-size:14px; font-weight:700; }
+
+/* Photo */
+.id-photo {
+    width:72px;
+    height:72px;
+    border-radius:50%;
+    border:3px solid white;
+    object-fit:cover;
+    margin-top:10px;
+}
+
+/* Name */
+.name {
+    font-size:14px;
+    font-weight:700;
+    color:#0b5ed7;
+}
+
+.info p {
+    font-size:10px;
+    margin:1px 0;
+}
+
+/* QR */
+#qrcode canvas {
+    width:40px !important;
+    height:40px !important;
+}
+
+.btn-print, .btn-home {
+    margin-top:20px;
+    width:200px;
+    border-radius:30px;
+    padding:10px;
+    font-weight:600;
+}
+
+.btn-home { background:#0b5ed7; color:white; }
+</style>
+
+</head>
+<body>
+
+<div id="idcard" class="id-card">
+
+    <div class="watermark"></div>
+
+    <div class="id-header">
+        <h5>NOORUSSALAM SECONDARY MADRASA</h5>
+        <small>Kambippalam Kerala Estate</small>
+        <small>Under SKIMVB | Reg No: 6110</small>
+        <small>Web site:www.noorussalammadrasa.online</small>
+    </div>
+
+    <img src="${s.PhotoURL}" class="id-photo">
+    <div class="name">${s.FullName}</div>
+
+    <div class="info">
+        <p><b>UID:</b> ${s.UID}</p>
+        <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
+        <p><b>Father’s Name:</b> ${s.FatherName}</p>
+        <p><b>Class:</b> ${s.ClassLevel}</p>
+        <p><b>Roll No:</b> ${s.RollNumber}</p>
+        <p><b>Phone:</b> ${s.Phone}</p>
+        <p><b>Address:</b> ${s.Address}</p>
+    </div>
+
+    <div id="qrcode"></div>
+</div>
+
+<button onclick="window.print()" class="btn btn-outline-primary btn-print">Print ID Card</button>
+
+<a href="index.html">
+<button class="btn-home">Back to Home</button>
+</a>
 
 <script>
-  // --------------------------- SAMPLE DATA ---------------------------
-  const student = {
-    FullName: "Mohammed Azhar",
-    UID: "NSM-11025",
-    Admission: "4552",
-    Father: "Mr. Ibrahim",
-    Class: "7",
-    Roll: "18",
-    Phone: "9846123450",
-    Photo: "https://via.placeholder.com/200"
-  };
+QRCode.toCanvas(
+  document.getElementById("qrcode"),
+  "UID: ${s.UID}\\nName: ${s.FullName}",
+  { width: 40 }
+);
+</script>
 
-  // Fill Data
-  document.getElementById("fullname").innerText = student.FullName;
-  document.getElementById("uid").innerText = student.UID;
-  document.getElementById("admno").innerText = student.Admission;
-  document.getElementById("father").innerText = student.Father;
-  document.getElementById("class").innerText = student.Class;
-  document.getElementById("roll").innerText = student.Roll;
-  document.getElementById("phone").innerText = student.Phone;
-  document.getElementById("photo").src = student.Photo;
+</body>
+</html>
+        `;
 
-  // Generate QR Code (Optional)
-  QRCode.toCanvas(
-    document.getElementById("qrcode"),
-    `UID: ${student.UID}\nName:${student.FullName}\nClass:${student.Class}`,
-    { width: 80 }
-  );
+        win.document.open();
+        win.document.write(html);
+        win.document.close();
+
+    } catch (err) {
+        win.document.body.innerHTML =
+            "<h3 style='color:red;text-align:center;'>Error fetching data.</h3>";
+    }
+});
 </script>
 
 </body>
